--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/my_db
+spring.datasource.url=jdbc:mysql://localhost:3306/my_db10
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
+
+# Hibernate properties
+spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+server.port=8080
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
